// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`page/SqlManagement/StatusTag render ignored status tag 1`] = `
<body>
  <div>
    <span
      class="ant-tag ant-tag-has-color basic-tag-wrapper basic-small-tag-wrapper css-dfzxkh css-dev-only-do-not-override-txh9fw"
      style="background-color: gray;"
    >
      已忽略
    </span>
  </div>
</body>
`;

exports[`page/SqlManagement/StatusTag render manual_audited status tag 1`] = `
<body>
  <div>
    <span
      class="ant-tag ant-tag-blue basic-tag-wrapper basic-small-tag-wrapper css-1q0n2j9 css-dev-only-do-not-override-txh9fw"
    >
      已人工审核
    </span>
  </div>
</body>
`;

exports[`page/SqlManagement/StatusTag render solved status tag 1`] = `
<body>
  <div>
    <span
      class="ant-tag ant-tag-green basic-tag-wrapper basic-small-tag-wrapper css-13qu6j1 css-dev-only-do-not-override-txh9fw"
    >
      已解决
    </span>
  </div>
</body>
`;

exports[`page/SqlManagement/StatusTag render unhandled status tag 1`] = `
<body>
  <div>
    <span
      class="ant-tag ant-tag-red basic-tag-wrapper basic-small-tag-wrapper css-xyvxme css-dev-only-do-not-override-txh9fw"
    >
      未处理
    </span>
  </div>
</body>
`;
